--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jss": "latest",
     "jss-preset-default": "latest",
     "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.10",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
