--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jss-preset-default": "latest",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.10",
+    "polished": "^1.7.0",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -16,6 +17,7 @@
     "react-scripts": "latest",
     "rebass": "^1.0.4",
     "recompose": "latest",
+    "reset-css": "^2.2.1",
     "styled-components": "^2.1.2",
     "styled-system": "^1.0.0-13"
   },
