--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "autosuggest-highlight": "^3.1.0",
     "jss": "latest",
     "jss-preset-default": "latest",
     "material-ui": "next",
@@ -10,8 +11,10 @@
     "polished": "^1.7.0",
     "prop-types": "latest",
     "react": "latest",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "latest",
     "react-jss": "latest",
+    "react-responsive": "^1.3.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "latest",
