--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "latest",
+    "react-transition-group": "^2.2.0",
     "rebass": "^1.0.4",
     "recompose": "latest",
     "reset-css": "^2.2.1",
