--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recompose": "latest",
     "reset-css": "^2.2.1",
     "styled-components": "^2.1.2",
+    "styled-reset": "^0.1.2",
     "styled-system": "^1.0.0-13"
   },
   "scripts": {
