--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "latest",
+    "react-scrollable-anchor": "^0.5.0",
     "react-social-icons": "^2.7.0",
     "react-transition-group": "^2.2.0",
     "rebass": "^1.0.4",
