--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-autosuggest": "^9.3.2",
     "react-dom": "latest",
     "react-ink": "^6.2.0",
+    "react-inlinesvg": "^0.6.2",
     "react-jss": "latest",
     "react-responsive": "^1.3.4",
     "react-router": "^4.2.0",
